; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_set_reset_done.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_set_reset_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bxe_softc = type { i32 }

@BXE_PATH1_RST_IN_PROG_BIT = common dso_local global i32 0, align 4
@BXE_PATH0_RST_IN_PROG_BIT = common dso_local global i32 0, align 4
@HW_LOCK_RESOURCE_RECOVERY_REG = common dso_local global i32 0, align 4
@BXE_RECOVERY_GLOB_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bxe_softc*)* @bxe_set_reset_done to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bxe_set_reset_done(%struct.bxe_softc* %0) #0 {
  %2 = alloca %struct.bxe_softc*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.bxe_softc* %0, %struct.bxe_softc** %2, align 8
  %5 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %6 = call i64 @SC_PATH(%struct.bxe_softc* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @BXE_PATH1_RST_IN_PROG_BIT, align 4
  br label %12

10:                                               ; preds = %1
  %11 = load i32, i32* @BXE_PATH0_RST_IN_PROG_BIT, align 4
  br label %12

12:                                               ; preds = %10, %8
  %13 = phi i32 [ %9, %8 ], [ %11, %10 ]
  store i32 %13, i32* %4, align 4
  %14 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %15 = load i32, i32* @HW_LOCK_RESOURCE_RECOVERY_REG, align 4
  %16 = call i32 @bxe_acquire_hw_lock(%struct.bxe_softc* %14, i32 %15)
  %17 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %18 = load i32, i32* @BXE_RECOVERY_GLOB_REG, align 4
  %19 = call i32 @REG_RD(%struct.bxe_softc* %17, i32 %18)
  store i32 %19, i32* %3, align 4
  %20 = load i32, i32* %4, align 4
  %21 = xor i32 %20, -1
  %22 = load i32, i32* %3, align 4
  %23 = and i32 %22, %21
  store i32 %23, i32* %3, align 4
  %24 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %25 = load i32, i32* @BXE_RECOVERY_GLOB_REG, align 4
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @REG_WR(%struct.bxe_softc* %24, i32 %25, i32 %26)
  %28 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %29 = load i32, i32* @HW_LOCK_RESOURCE_RECOVERY_REG, align 4
  %30 = call i32 @bxe_release_hw_lock(%struct.bxe_softc* %28, i32 %29)
  ret void
}

declare dso_local i64 @SC_PATH(%struct.bxe_softc*) #1

declare dso_local i32 @bxe_acquire_hw_lock(%struct.bxe_softc*, i32) #1

declare dso_local i32 @REG_RD(%struct.bxe_softc*, i32) #1

declare dso_local i32 @REG_WR(%struct.bxe_softc*, i32, i32) #1

declare dso_local i32 @bxe_release_hw_lock(%struct.bxe_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
